<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_translucent"
    tools:context="voidream.vcontroller.AboutUs">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_rounded_rectangle_black"
            android:layout_centerInParent="true"
            android:layout_weight="0.125">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:scrollbarThumbVertical="@drawable/custom_scollbar">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_launcher"
                        android:layout_marginTop="32dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:id="@+id/textView21"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/designer"
                        android:id="@+id/textView35"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="28dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name1"
                        android:id="@+id/textView38"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debugger"
                        android:id="@+id/textView32"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name2"
                        android:id="@+id/textView39"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/additional"
                        android:id="@+id/textView40"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="28dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lib1"
                        android:id="@+id/textView41"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thanks"
                        android:id="@+id/textView42"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView43"
                        android:textColor="@android:color/white"
                        android:text="@string/thanks1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView44"
                        android:textColor="@android:color/white"
                        android:text="@string/thanks2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/com"
                        android:id="@+id/textView45"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="28dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView46"
                        android:textColor="@android:color/white"
                        android:text="@string/voidream" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:id="@+id/textView47"
                        android:textColor="@color/colorGrey400"
                        android:layout_marginTop="28dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView49"
                        android:textColor="@android:color/white"
                        android:text="@string/contact1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView50"
                        android:textColor="@android:color/white"
                        android:text="@string/contact3"
                        android:layout_marginBottom="32dp"/>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
