<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/window_translucent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="voidream.vcontroller.Config">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_rounded_rectangle"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearlayout_config_mqtt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/broker_url"
                    android:id="@+id/textView53"
                    android:textColor="@color/text2"
                    android:paddingLeft="6dp"
                    android:paddingTop="2dp"
                    android:textSize="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_config_mqtt_broker_url"
                    android:inputType="textWebEditText"
                    android:background="@drawable/background_textfield"
                    android:textSize="12dp"
                    android:textColor="@color/text1"
                    android:textColorHint="@color/text4"
                    android:hint="@string/default_mqtt_broker"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="8dp"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port"
                    android:id="@+id/textView54"
                    android:textColor="@color/text2"
                    android:paddingLeft="6dp"
                    android:paddingTop="2dp"
                    android:textSize="12dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_config_mqtt_port"
                    android:background="@drawable/background_textfield"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="12dp"
                    android:textColor="@color/text1"
                    android:textColorHint="@color/text4"
                    android:hint="@string/default_mqtt_port"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="2.5dp"
                    android:padding="8dp"
                    android:maxLines="1" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:id="@+id/textView55"
                            android:textColor="@color/text2"
                            android:paddingLeft="6dp"
                            android:paddingTop="2dp"
                            android:textSize="12dp"
                            android:layout_marginLeft="5dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edittext_config_mqtt_username"
                            android:background="@drawable/background_textfield"
                            android:hint="@string/optional"
                            android:inputType="text"
                            android:textSize="12dp"
                            android:textColor="@color/text1"
                            android:textColorHint="@color/text4"
                            android:layout_marginTop="2.5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:padding="8dp"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:id="@+id/textView56"
                            android:textColor="@color/text2"
                            android:paddingLeft="6dp"
                            android:paddingTop="2dp"
                            android:textSize="12dp"
                            android:layout_marginLeft="5dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edittext_config_mqtt_password"
                            android:background="@drawable/background_textfield"
                            android:hint="@string/optional"
                            android:inputType="textPassword"
                            android:textSize="12dp"
                            android:textColor="@color/text1"
                            android:textColorHint="@color/text4"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="2.5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:padding="8dp"
                            android:maxLines="1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/set_config"
                android:id="@+id/button_config_set"
                android:background="@drawable/button_flat"
                android:textColor="@android:color/white"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="14dp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout"></RelativeLayout>

</RelativeLayout>
